IVYPORTAL-5666: Various or urgent requests in IVYPORTAL S157 - Fixed UI error of statistic filter on IE

--- a/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
+++ b/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
@@ -4787,6 +4787,10 @@ margin-top
 	border: solid 1px #E0E0E0 !important;
 }
 
+_:-ms-fullscreen, :root .statistic-filter-accordion-panel .ui-accordion-content {
+	max-width: 27.3rem;
+}
+
 .statistic-filter-container.ui-scrollpanel {
 	border: none;
 	padding: 0;
